test/io/sungeun/ioerror.EACCES.good
ioerror.chpl:10: error: uncaught error - Permission denied EACCES with path "this/is/my/path" offset -1
